Add Code Review 01 changes

--- a/mock3.html
+++ b/mock3.html
@@ -2,23 +2,23 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Mock 3 Page</title>
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,400' rel='stylesheet' type='text/css'>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <!--link rel="stylesheet" href="css/main.css"-->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,400" >
+    <link rel="stylesheet" href="css/bootstrap.css" >
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
-        <div class="row" id="header">
+        <header class="row">
             <div class="col-md-6">
-              <img src="img/udacity-logo.jpg" class="title-logo" width="80px">
+              <img src="img/udacity-logo.jpg" class="title-logo" alt="udacity logo">
             </div>
             <div class="col-md-6 text-right text-uppercase">
                 <h1 class="text-thin title-super">Jane Doette</h1>
                 <h6>Front-End Ninja</h6>
             </div>
-        </div>
+        </header>
         <div class="row">
             <img src="img/html.jpg" class="img-responsive col-md-12" alt="html">
         </div>
