Add Code Review 03 change. 	- Additional col class in div 	- No font shorthand because of no declared font size

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="row">
-            <div>
+            <div class="col-md-3">
                 <h2 class="text-muted">Featured Work</h2>
             </div>
         </div>
