Add Code Review 04 change 	- Add col-md-9 div

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
         </header>
         <div class="row">
             <div class="col-md-12">
-                <img src="img/html.jpg" class="img-responsive col-md-12" alt="html">
+                <img src="img/html.jpg" class="img-responsive" alt="html">
             </div>
         </div>
         <div class="row">
             <div class="col-md-3">
                 <h2 class="text-muted">Featured Work</h2>
             </div>
+            <div class="col-md-9"></div>
         </div>
         <div class="row text-center row-image" id="app-list">
             <div class="col-md-4">
