Add Code Review 04 changes 	- Add header-img class 	- Add header-img width 100%

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         <div class="row">
             <div class="col-md-12">
-                <img src="img/html.jpg" class="img-responsive" alt="html">
+                <img src="img/html.jpg" class="img-responsive header-img" alt="html">
             </div>
         </div>
         <div class="row">
